# veles

./: .gitignore  CMakeLists.txt  README.md  taskfile.yaml  vcpkg.json
.github/workflows/: ci.yml
cmake/: embed_file.cmake
glsl/: main.frag.glsl  main.vert.glsl
src/: main.c  mtx.c  shader.c
